--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/platform-express": "^9.0.0",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
